[package]
name = "artifact-store"
version = "0.7.1"
repository = "https://github.com/harryzcy/artifact-store"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "=0.8.2" }
futures-util = "=0.3.31"
hyper = { version = "=1.6.0", features = ["full"] }
hyper-util = { version = "=0.1.10", features = [
  "tokio",
  "server-auto",
  "http1",
] }
rocksdb = { version = "=0.23.0", features = ["multi-threaded-cf"] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.138"
time = { version = "=0.3.37", features = ["serde", "formatting"] }
tokio = { version = "=1.43.0", features = ["full"] }
tokio-util = { version = "=0.7.13", features = ["io"] }
tower-http = { version = "=0.6.2", features = ["trace", "timeout"] }
tower-service = "=0.3.3"
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["json"] }

[dev-dependencies]
bytes = "=1.10.0"
http = "=1.1.0"
http-body = "=1.0.0"
http-body-util = "=0.1.1"
tower = "=0.5.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
