[package]
name = "artifact-store"
version = "0.7.1"
repository = "https://github.com/harryzcy/artifact-store"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "=0.8.7" }
futures-util = "=0.3.31"
hyper = { version = "=1.8.1", features = ["full"] }
hyper-util = { version = "=0.1.19", features = [
  "tokio",
  "server-auto",
  "http1",
] }
rocksdb = { version = "=0.24.0", features = ["multi-threaded-cf"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
time = { version = "=0.3.44", features = ["serde", "formatting"] }
tokio = { version = "=1.48.0", features = ["full"] }
tokio-util = { version = "=0.7.17", features = ["io"] }
tower-http = { version = "=0.6.8", features = ["trace", "timeout"] }
tower-service = "=0.3.3"
tracing = "=0.1.43"
tracing-subscriber = { version = "=0.3.22", features = ["json"] }

[dev-dependencies]
bytes = "=1.11.0"
http = "=1.4.0"
http-body = "=1.0.1"
http-body-util = "=0.1.3"
tower = "=0.5.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
